RESOLVED FIXED 262905
[Site Isolation] Fix mouse event coordinates with scrolled frames
https://bugs.webkit.org/show_bug.cgi?id=262905
Summary [Site Isolation] Fix mouse event coordinates with scrolled frames
Charlie Wolfe
Reported 2023-10-09 11:28:42 PDT
Currently, mouse events passed to site-isolated frames will be offset if the target frame or target frame’s ancestors are scrolled.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-09 11:29:50 PDT
Charlie Wolfe
Comment 2 2023-10-09 11:37:32 PDT
EWS
Comment 3 2023-10-10 09:10:30 PDT
Committed 269143@main (20e46bea66da): <https://commits.webkit.org/269143@main> Reviewed commits have been landed. Closing PR #18854 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.