[Site Isolation] Fix mouse event coordinates with scrolled frames https://bugs.webkit.org/show_bug.cgi?id=262905 rdar://116690742

Reviewed by Alex Christensen.

Currently, mouse events passed to site-isolated frames will be offset if the target frame or target
frame’s ancestors are scrolled. We should convert to/from root view coordinates so that the scroll
position for each frame is considered.

Also change the parameter back on `documentPointForWindowPoint()` since that function should only be
used for local frames.

* LayoutTests/http/tests/site-isolation/mouse-events/resources/message-mouse-down-coordinates.html: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/resources/scroll-and-message-mouse-down-coordinates.html: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/scrolled-iframe-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/scrolled-iframe.html: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/scrolled-mainframe-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/scrolled-mainframe.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/page/EventHandler.cpp:
(WebCore::documentPointForWindowPoint):
(WebCore::EventHandler::mouseEventDataForRemoteFrame):
(WebCore::EventHandler::handleMousePressEvent):
(WebCore::EventHandler::handleMouseMoveEvent):
(WebCore::EventHandler::handleMouseReleaseEvent):
* Source/WebCore/page/EventHandler.h:

Canonical link: https://commits.webkit.org/269143@main